# pillow-datauri

./: .gitignore  README.md  pyproject.toml
src/pillow_datauri/: __init__.py  core.py
tests/: test_datauri.py
